# ai-transcript-backup

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plan/todo/: 2026-04-25-cursor-transcript-backup-cli.md
examples/: backup-linux-samba.sh  backup-windows-drive.ps1  backup-windows-unc.ps1
src/cursor_transcript_backup/: __init__.py  cli.py  copy.py  discover.py  env.py  manifest.py  paths.py
tests/: test_copy.py  test_discover.py  test_env.py  test_paths.py
